[package]
name = "liru"
version = "0.1.6"
authors = ["Jimmie Elvenmark <flugsio@gmail.com>"]
repository = "https://github.com/flugsio/liru"
edition = "2018"

[dependencies]
log = "0.4.6" # https://github.com/rust-lang-nursery/log/blob/master/CHANGELOG.md
fern = "0.5.8" # https://github.com/daboross/fern/blob/master/CHANGELOG.md
uuid = { version = "0.6.5", features = ["v4"] } # https://github.com/uuid-rs/uuid/releases
ws = { version = "0.7.6", features = ["ssl"] }
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
rustbox = "0.11.0"
time = "0.1.40"
futures = "0.3"
hyper = { version = "0.14.19", features = ["client", "http1"] }
hyper-tls = "0.5.0"
tokio = { version = "1.19.2", features = ["full"] }
url = "1.7.1"
cookie = "0.10.1"
openssl = { version = "0.10", features = ["vendored"] }
